--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ edition = "2021"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 
 clap = { version = "4.3.3", features = ["derive"] }
+chrono = "0.4.26"
