--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ rusqlite = { version = "0.29.0", features = ["bundled"] }
 
 clap = { version = "4.3.3", features = ["derive"] }
 chrono = "0.4.26"
+faccess = "0.2.4"
